--- a/index.html
+++ b/index.html
@@ -27,6 +27,44 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/styles/default.css" />
     <link rel="stylesheet" href="./src/styles/index.css" />
+    <link rel="stylesheet" href="./src/styles/header.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="row jbetween acenter">
+      <a href="#" class="logo_area row jstart acenter">
+        <img src="./src/imgs/logo_felipe.png" alt="Logo" class="logo" />
+        <p class="logo_name">FF Schneider</p>
+      </a>
+      <nav class="row jend acenter">
+        <ul class="row acenter">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#" class="row acenter"
+              >Projects
+              <ion-icon name="chevron-down" id="chevron-down"></ion-icon>
+            </a>
+            <ul class="dropdown">
+              <li>
+                <a href="#">Test Project 1</a>
+              </li>
+              <li>
+                <a href="#">Test Project 1</a>
+              </li>
+              <li>
+                <a href="#">Test Project 1</a>
+              </li>
+              <li>
+                <a href="#">Test Project 1</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" id="btn-contact">Get in touch</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
