--- a/index.html
+++ b/index.html
@@ -66,5 +66,26 @@
         </ul>
       </nav>
     </header>
+    <main class="column jcenter astart">
+      <!-- BANNER -->
+      <section class="banner row aend jbetween">
+        <div class="banner_text column jcenter astart">
+          <h1>Felipe</h1>
+          <h1 id="colored">Schneider</h1>
+          <h3>
+            8+ years of experience in developing hardware and firmware for
+            electromedical equipment, skilled MSc Electrical Engineer who leads
+            projects that positively impact the lives of others.
+          </h3>
+          <a href="#">Get in touch </a>
+        </div>
+        <img
+          src="./src/imgs/banner_photo.png"
+          alt="Felipe's Photo"
+          class="banner_img"
+        />
+      </section>
+      <!-- SKILLS CARDS -->
+    </main>
   </body>
 </html>
