finish skill cards

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </nav>
     </header>
     <main class="column jcenter astart">
-      <!-- BANNER -->
+      <!-- BANNER BEGINNING -->
       <section class="banner row aend jbetween">
         <div class="banner_text column jcenter astart">
           <h1>Felipe</h1>
@@ -85,7 +85,119 @@
           class="banner_img"
         />
       </section>
-      <!-- SKILLS CARDS -->
+
+      <!-- SKILL CARDS -->
+      <section class="skills">
+        <div class="skill_container row jcenter astart">
+          <!-- SKILL CARD BEGINNING -->
+          <div class="skill_card column jstart acenter">
+            <img
+              src="/src/imgs/icon_fp_01.png"
+              alt="Development of medical devices"
+              class="skill_img"
+            />
+            <p class="skill_title">Development of medical devices</p>
+            <p class="skill_desc">
+              With over <b>10 yearsb</b> of experience in developing and leading
+              teams across various medical device projects, I have contributed
+              to advancements in areas such as
+              <b>chronic wounds, respiratory systems</b>, and
+              <b>endoscopic rhinoscopes</b>.
+            </p>
+            <p class="skill_desc">
+              Throughout my career, I have taken on diverse roles, including
+              Electrical Engineer, Customer Service and Management, Product
+              Owner, and CTO, gaining a comprehensive perspective on the medical
+              device development lifecycle.
+            </p>
+          </div>
+          <!-- SKILL CARD END -->
+
+          <div class="skill_card column jstart acenter">
+            <img
+              src="/src/imgs/icon_fp_02.png"
+              alt="Electrical safety and EMC compliance"
+              class="skill_img"
+            />
+            <p class="skill_title">Electrical safety and EMC compliance</p>
+            <p class="skill_desc">
+              Failing electrical safety or EMC tests can be both costly and
+              time-consuming. With firsthand experience in these challenges, I
+              can guide you through these complex standards and help fine-tune
+              your hardware, firmware, and software to minimize failure risks
+              while maintaining cost efficiency.
+            </p>
+            <p class="skill_desc">
+              When needed, we can also conduct pre-compliance EMC or safety
+              tests in certified laboratories, offering valuable insights at a
+              relatively low cost to ensure your project stays on track.
+            </p>
+          </div>
+
+          <div class="skill_card column jstart acenter">
+            <img
+              src="/src/imgs/icon_fp_03.png"
+              alt="Device and process documentation"
+              class="skill_img"
+            />
+            <p class="skill_title">Device and process documentation</p>
+            <p class="skill_desc">
+              With extensive experience in IEC 60601-1, IEC 60601-1-2, IEC TR
+              60601-4-2, IEC 62304, IEC 62471, IEC 60601-2-57, IEC 60601-2-18,
+              FDA Software Requirements, and other key standards and guidances
+              such as ISO 13495, I can help navigate complex regulatory
+              landscapes.
+            </p>
+            <p class="skill_desc">
+              I understand that no development holds value unless the device
+              reaches the market. I can identify applicable regulatory
+              requirements, present them clearly and concisely, and collaborate
+              with you to develop the necessary documentation for your project's
+              regulatory approval.
+            </p>
+          </div>
+
+          <div class="skill_card column jstart acenter">
+            <img
+              src="/src/imgs/icon_fp_04.png"
+              alt="Cost-effective ISO and IEC labs"
+              class="skill_img"
+            />
+            <p class="skill_title">Cost-effective ISO and IEC labs</p>
+            <p class="skill_desc">
+              Brazil offers excellent <b>ILAC-approved</b> laboratories, whose
+              reports are recognized by both <b>MDR</b> and <b>FDA</b>. These
+              labs provide a cost-effective solution for testing your medical
+              devices, often at a fraction of the cost typically found in the
+              USA.
+            </p>
+            <p class="skill_desc">
+              I have personally experienced this advantage, obtaining laboratory
+              results at just <b>15%</b> of the cost of a U.S. lab while
+              successfully securing FDA approval for our medical device.
+            </p>
+          </div>
+
+          <div class="skill_card column jstart acenter">
+            <img
+              src="/src/imgs/icon_fp_05.png"
+              alt="Key turn prototype and more"
+              class="skill_img"
+            />
+            <p class="skill_title">Key turn prototype and more</p>
+            <p class="skill_desc">
+              I can develop quick, ready-to-test prototypes to validate your
+              hypotheses and advance key steps in your development process of
+              medical and non-medical devices.
+            </p>
+            <p class="skill_desc">
+              If a specific task is beyond my scope or not the best fit for me,
+              I can assemble a team of skilled specialists to address your
+              challenge effectively.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
