add cards to projects page

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./src/styles/default.css" />
-    <link rel="stylesheet" href="./src/styles/index.css" />
     <link rel="stylesheet" href="./src/styles/header.css" />
+    <link rel="stylesheet" href="./src/styles/index.css" />
   </head>
   <body>
     <header class="row jbetween acenter">
-      <a href="#" class="logo_area row jstart acenter">
+      <a href="./index.html" class="logo_area row jstart acenter">
         <img src="./src/imgs/logo_felipe.png" alt="Logo" class="logo" />
         <p class="logo_name">FF Schneider</p>
       </a>
       <nav class="row jend acenter">
         <ul class="row acenter">
           <li>
-            <a href="#">Home</a>
+            <a href="./index.html">Home</a>
           </li>
           <li>
-            <a href="#" class="row acenter"
+            <a href="./projects.html" class="row acenter"
               >Projects
               <ion-icon name="chevron-down" id="chevron-down"></ion-icon>
             </a>
