add dividers, vertical cards and finish projects main page

--- a/projects.html
+++ b/projects.html
@@ -74,9 +74,11 @@
           Projects that I have led or intensively worked on
         </p>
       </section>
+
+      <!-- PROJECT LIST -->
       <section class="projects column jcenter astart">
-        <!-- PROJECT CARD BEGINNING -->
-        <div class="project row jbetween acenter">
+        <!-- PROJECT CARD (HORIZONTAL) BEGINNING -->
+        <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
               src="./src/imgs/project_01/img_01.png"
@@ -109,7 +111,7 @@
         </div>
         <!-- PROJECT CARD END -->
 
-        <div class="project project_white reverse row jbetween acenter">
+        <div class="project reverse row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
               src="./src/imgs/project_02/img_01.png"
@@ -144,7 +146,7 @@
           </div>
         </div>
 
-        <div class="project row jbetween acenter">
+        <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
               src="./src/imgs/project_03/img_01.png"
@@ -174,7 +176,7 @@
           </div>
         </div>
 
-        <div class="project project_white reverse row jbetween acenter">
+        <div class="project reverse row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
               src="./src/imgs/project_04/img_01.jpg"
@@ -201,6 +203,124 @@
             </p>
           </div>
         </div>
+      </section>
+
+      <section class="divider row jcenter acenter">
+        <p>Other projects: mostly prototypes, PoC's, and side projects</p>
+      </section>
+
+      <!-- OTHER PROJECTS -->
+      <section
+        class="projects projects_vertical row jcenter astart"
+        style="margin-top: 100px"
+      >
+        <!-- PROJECT CARD (VERTICAL) BEGINNING -->
+        <div class="project p_vertical column jbetween acenter">
+          <div class="project_img row jstart astart">
+            <img
+              src="./src/imgs/others/img_01.jpg"
+              alt="Third-Party Device Certification"
+            />
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">Third-Party Device Certification</p>
+            <p class="project_desc">
+              Managing the certification process, including documentation and
+              hardware testing, for medical devices developed by third parties
+              (often Chinese companies) entering new markets.
+            </p>
+          </div>
+        </div>
+        <!-- PROJECT CARD END -->
+
+        <div class="project p_vertical column jbetween acenter">
+          <div class="project_img row jstart astart">
+            <img
+              src="./src/imgs/others/img_02.png"
+              alt="27 DoF IMU data fusion"
+            />
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">27 DoF IMU data fusion</p>
+            <p class="project_desc">
+              Development and implementation of hardware, firmware, and software
+              of a 27 degrees of freedom (DoF) Inertial Measurement Unit (IMU)
+              based on Madgwick and Kalman Filters.
+            </p>
+            <p class="project_desc">More about the project at my MSc Thesis</p>
+          </div>
+        </div>
+
+        <div class="project p_vertical column jbetween acenter">
+          <div class="project_img row jstart astart">
+            <img
+              src="./src/imgs/others/img_03.png"
+              alt="Consumer-grade gadgets"
+            />
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">Consumer-grade gadgets</p>
+            <p class="project_desc">
+              Designing consumer-grade PCBs focused on scalability, wide
+              operational temperature ranges, and diverse usage patterns.
+            </p>
+            <p class="project_desc">
+              For example, the Buck converter shown in the image was engineered
+              to connect to an external battery and regulate the output voltage
+              from 4.5V to 12V, delivering up to 30A with a maximum temperature
+              rise of 28°C, all while meeting EMC requirements.
+            </p>
+          </div>
+        </div>
+
+        <div class="project p_vertical column jbetween acenter">
+          <div class="project_img row jstart astart">
+            <img
+              src="./src/imgs/others/img_04.jpg"
+              alt="Distributed Polysomnography System"
+            />
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">Distributed Polysomnography System</p>
+            <p class="project_desc">
+              To reduce the discomfort of traditional polysomnography and
+              complete my graduation, I developed a battery-powered sleep
+              analysis system. This was my first PCB project, consisting of
+              three boards designed to monitor various aspects of sleep.
+            </p>
+            <p class="project_desc">
+              More about this project at Research on Biomedical Engineering.
+            </p>
+          </div>
+        </div>
+
+        <div class="project p_vertical column jbetween acenter">
+          <div class="project_img row jstart astart">
+            <img
+              src="./src/imgs/others/img_05.png"
+              alt="Mobile 3-lead ECG for Apple smartphones"
+            />
+          </div>
+          <div class="project_text column astart jstart">
+            <p class="project_title">Mobile 3-lead ECG for Apple smartphones</p>
+            <p class="project_desc">
+              Designed the analog front-end, signal processing, and data storage
+              for a portable electrocardiograph interfacing with iOS and Android
+              devices via Bluetooth 2.0. The project focused on
+              cost-effectiveness for the Brazilian market while adhering to
+              Apple's stringent documentation requirements. The result was a
+              functional prototype that was able to communicate with iPhones and
+              had a pretty decent SNR.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="divider row jcenter acenter">
+        <p>
+          This is not intended to be an extensive repository. If you're
+          interested, feel free to get in touch.
+        </p>
       </section>
     </main>
     <script src="./src/scripts/carousel.js"></script>
