improve carousel customization

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <header class="row jbetween acenter">
-      <a href="#" class="logo_area row jstart acenter">
+      <a href="./index.html" class="logo_area row jstart acenter">
         <img src="./src/imgs/logo_felipe.png" alt="Logo" class="logo" />
         <p class="logo_name">FF Schneider</p>
       </a>
