finish contact info section

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
       <!-- BANNER BEGINNING -->
       <section class="banner row aend jbetween">
         <div class="banner_text column jcenter astart">
-          <h1>Felipe</h1>
-          <h1 class="colored">Schneider</h1>
+          <h1 class="title">Felipe</h1>
+          <h1 class="title colored">Schneider</h1>
           <h3>
             8+ years of experience in developing hardware and firmware for
             electromedical equipment, skilled MSc Electrical Engineer who leads
             projects that positively impact the lives of others.
           </h3>
-          <a href="#">Get in touch </a>
+          <a href="#" class="contact_btn">Get in touch </a>
         </div>
         <img
           src="./src/imgs/banner_photo.png"
@@ -293,6 +293,29 @@
             <a href="#" class="project_view_more">View More</a>
           </div>
         </div>
+      </section>
+
+      <!-- CONTACT INFO -->
+      <section class="contact column jcenter acenter">
+        <h1 class="title colored">How can I help you?</h1>
+        <ul class="socials row jcenter acenter">
+          <li>
+            <a href="mailto:felipe@ffschneider.com" target="_blank"
+              ><ion-icon name="mail"></ion-icon
+            ></a>
+          </li>
+          <li>
+            <a href="https://wa.me/5527999101403" target="_blank"
+              ><ion-icon name="logo-whatsapp"></ion-icon
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/felipe-bas/" target="_blank"
+              ><ion-icon name="logo-linkedin"></ion-icon
+            ></a>
+          </li>
+        </ul>
+        <a href="#" class="contact_btn">Get in touch </a>
       </section>
     </main>
     <script src="./src/scripts/carousel.js"></script>
