finish footer and small link fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./src/styles/default.css" />
-    <link rel="stylesheet" href="./src/styles/header.css" />
+    <link rel="stylesheet" href="./src/styles/header_footer.css" />
     <link rel="stylesheet" href="./src/styles/index.css" />
   </head>
   <body>
@@ -79,7 +79,9 @@
             </ul>
           </li>
           <li>
-            <a href="#" id="btn-contact">Get in touch</a>
+            <a href="https://wa.me/5527999101403" id="btn-contact"
+              >Get in touch</a
+            >
           </li>
         </ul>
       </nav>
@@ -95,7 +97,9 @@
             electromedical equipment, skilled MSc Electrical Engineer who leads
             projects that positively impact the lives of others.
           </h3>
-          <a href="#" class="contact_btn">Get in touch </a>
+          <a href="https://wa.me/5527999101403" class="contact_btn"
+            >Get in touch
+          </a>
         </div>
         <img
           src="./src/imgs/banner_photo.png"
@@ -219,7 +223,9 @@
 
       <!-- PROJECTS CAROUSEL -->
       <section class="projects column acenter jstart">
-        <h1 class="projects_title colored">Projects</h1>
+        <h1 class="projects_title colored">
+          <a href="./projects.html">Projects</a>
+        </h1>
         <h3 class="projects_desc">That I have worked on</h3>
         <div class="projects_c_container row jcenter acenter">
           <!-- PROJECT CARD BEGINNING -->
@@ -300,24 +306,44 @@
         <h1 class="title colored">How can I help you?</h1>
         <ul class="socials row jcenter acenter">
           <li>
-            <a href="mailto:felipe@ffschneider.com" target="_blank"
+            <a
+              class="social_icon"
+              href="mailto:felipe@ffschneider.com"
+              target="_blank"
               ><ion-icon name="mail"></ion-icon
             ></a>
           </li>
           <li>
-            <a href="https://wa.me/5527999101403" target="_blank"
+            <a
+              class="social_icon"
+              href="https://wa.me/5527999101403"
+              target="_blank"
               ><ion-icon name="logo-whatsapp"></ion-icon
             ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/felipe-bas/" target="_blank"
+            <a
+              class="social_icon"
+              href="https://www.linkedin.com/in/felipe-bas/"
+              target="_blank"
               ><ion-icon name="logo-linkedin"></ion-icon
             ></a>
           </li>
         </ul>
-        <a href="#" class="contact_btn">Get in touch </a>
+        <a href="https://wa.me/5527999101403" class="contact_btn"
+          >Get in touch
+        </a>
       </section>
     </main>
+    <footer class="column jaround acenter">
+      <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
+      <a
+        class="social_icon"
+        href="https://www.linkedin.com/in/felipe-bas/"
+        target="_blank"
+        ><ion-icon name="logo-linkedin"></ion-icon
+      ></a>
+    </footer>
     <script src="./src/scripts/carousel.js"></script>
   </body>
 </html>
