--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./src/styles/default.css" />
-    <link rel="stylesheet" href="./src/styles/header.css" />
+    <link rel="stylesheet" href="./src/styles/header_footer.css" />
     <link rel="stylesheet" href="./src/styles/projects.css" />
   </head>
   <body>
@@ -63,7 +63,7 @@
             </ul>
           </li>
           <li>
-            <a href="#" id="btn-contact">Get in touch</a>
+            <a href="https://wa.me/5527999101403" id="btn-contact">Get in touch</a>
           </li>
         </ul>
       </nav>
@@ -323,6 +323,15 @@
         </p>
       </section>
     </main>
+    <footer style="margin-top: 0px;" class="column jaround acenter">
+      <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
+      <a
+        class="social_icon"
+        href="https://www.linkedin.com/in/felipe-bas/"
+        target="_blank"
+        ><ion-icon name="logo-linkedin"></ion-icon
+      ></a>
+    </footer>
     <script src="./src/scripts/carousel.js"></script>
   </body>
 </html>
