fix links and start individual pages

--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
       <nav class="row jend acenter">
         <ul class="row acenter">
           <li>
-            <a href="./index.html">Home</a>
+            <a href="../index.html">Home</a>
           </li>
           <li>
-            <a href="./projects.html" class="row acenter"
+            <a href="./pages/projects.html" class="row acenter"
               >Projects
               <ion-icon name="chevron-down" id="chevron-down"></ion-icon>
             </a>
             <ul class="dropdown">
               <li>
-                <a href="#">Chronic wound care</a>
+                <a href="./pages/chronic-wound-care.html">Chronic wound care</a>
               </li>
               <li>
-                <a href="#">Cough-Assist</a>
+                <a href="./pages/cough-assist.html">Cough-Assist</a>
               </li>
               <li>
-                <a href="#">Veterinary Ventilator</a>
+                <a href="./pages/veterinary-ventilator.html">Veterinary Ventilator</a>
               </li>
               <li>
-                <a href="#">Class II ventilator</a>
+                <a href="./pages/class-II-ventilator.html">Class II ventilator</a>
               </li>
             </ul>
           </li>
@@ -224,34 +224,43 @@
       <!-- PROJECTS CAROUSEL -->
       <section class="projects column acenter jstart">
         <h1 class="projects_title colored">
-          <a href="./projects.html">Projects</a>
+          <a href="./pages/projects.html">Projects</a>
         </h1>
         <h3 class="projects_desc">That I have worked on</h3>
         <div class="projects_c_container row jcenter acenter">
           <!-- PROJECT CARD BEGINNING -->
           <div class="project_c_card column jaround acenter">
-            <img
-              src="./src/imgs/project_01/img_01.png"
-              alt="Chronic wound care therapy Device"
-              class="project_c_img"
-            />
+            <a
+              class="row jcenter jcenter"
+              href="./pages/chronic-wound-care.html"
+            >
+              <img
+                src="./src/imgs/project_01/img_01.png"
+                alt="Chronic wound care therapy Device"
+                class="project_c_img"
+              />
+            </a>
             <p class="project_c_title">Chronic wound care therapy Device</p>
             <p class="project_c_desc">
               The device introduces a novel approach to chronic wound treatment,
               utilizing non-coherent light therapy and advanced camera systems
               to enhance operator precision and ensure patient safety.
             </p>
-            <a href="#" class="project_view_more">View More</a>
+            <a href="./pages/chronic-wound-care.html" class="project_view_more"
+              >View More</a
+            >
           </div>
           <!-- PROJECT CARD END -->
 
           <div class="project_c_card column jaround acenter">
-            <img
-              src="./src/imgs/project_02/img_01.png"
-              alt="Mechanical insufflation-exsufflation device
-              "
-              class="project_c_img"
-            />
+            <a class="row jcenter jcenter" href="./pages/cough-assist.html">
+              <img
+                src="./src/imgs/project_02/img_01.png"
+                alt="Mechanical insufflation-exsufflation device
+                "
+                class="project_c_img"
+              />
+            </a>
             <p class="project_c_title">
               Mechanical insufflation-exsufflation device
             </p>
@@ -260,15 +269,22 @@
               cost-effective, locally-produced cough assist machine for the
               Brazilian market.
             </p>
-            <a href="#" class="project_view_more">View More</a>
+            <a href="./pages/cough-assist.html" class="project_view_more"
+              >View More</a
+            >
           </div>
 
           <div class="project_c_card column jaround acenter">
-            <img
-              src="./src/imgs/project_03/img_01.png"
-              alt="Veterinary ventilator and anesthesia machine"
-              class="project_c_img"
-            />
+            <a
+              class="row jcenter jcenter"
+              href="./pages/veterinary-ventilator.html"
+            >
+              <img
+                src="./src/imgs/project_03/img_01.png"
+                alt="Veterinary ventilator and anesthesia machine"
+                class="project_c_img"
+              />
+            </a>
             <p class="project_c_title">
               Veterinary ventilator and anesthesia machine
             </p>
@@ -279,15 +295,24 @@
               critically ill animals who could not breathe independently but
               also to function as an anesthesia machine during surgeries.
             </p>
-            <a href="#" class="project_view_more">View More</a>
+            <a
+              href="./pages/veterinary-ventilator.html"
+              class="project_view_more"
+              >View More</a
+            >
           </div>
 
           <div class="project_c_card column jaround acenter">
-            <img
-              src="./src/imgs/project_04/img_01.jpg"
-              alt="Class II mechanical ventilator"
-              class="project_c_img"
-            />
+            <a
+              class="row jcenter jcenter"
+              href="./pages/class-II-ventilator.html"
+            >
+              <img
+                src="./src/imgs/project_04/img_01.jpg"
+                alt="Class II mechanical ventilator"
+                class="project_c_img"
+              />
+            </a>
             <p class="project_c_title">Class II mechanical ventilator</p>
             <p class="project_c_desc">
               Anticipating a ventilator shortage in Europe during COVID-19, my
@@ -296,7 +321,9 @@
               non-life-support use within five months, with plans to produce up
               to 3,000 units monthly at the crisis's peak.
             </p>
-            <a href="#" class="project_view_more">View More</a>
+            <a href="./pages/class-II-ventilator.html" class="project_view_more"
+              >View More</a
+            >
           </div>
         </div>
       </section>
