--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,7 @@
     <title>FF Schneider</title>
     <link
       rel="shortcut icon"
-      href="./src/imgs/logo_felipe.png"
+      href="../src/imgs/logo_felipe.png"
       type="image/x-icon"
     />
 
@@ -27,20 +27,20 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./src/styles/default.css" />
-    <link rel="stylesheet" href="./src/styles/header_footer.css" />
-    <link rel="stylesheet" href="./src/styles/projects.css" />
+    <link rel="stylesheet" href="../src/styles/default.css" />
+    <link rel="stylesheet" href="../src/styles/header_footer.css" />
+    <link rel="stylesheet" href="../src/styles/projects.css" />
   </head>
   <body>
     <header class="row jbetween acenter">
-      <a href="./index.html" class="logo_area row jstart acenter">
-        <img src="./src/imgs/logo_felipe.png" alt="Logo" class="logo" />
+      <a href="../index.html" class="logo_area row jstart acenter">
+        <img src="../src/imgs/logo_felipe.png" alt="Logo" class="logo" />
         <p class="logo_name">FF Schneider</p>
       </a>
       <nav class="row jend acenter">
         <ul class="row acenter">
           <li>
-            <a href="./index.html">Home</a>
+            <a href="../index.html">Home</a>
           </li>
           <li>
             <a href="./projects.html" class="row acenter"
@@ -49,21 +49,23 @@
             </a>
             <ul class="dropdown">
               <li>
-                <a href="#">Chronic wound care</a>
+                <a href="./chronic-wound-care.html">Chronic wound care</a>
               </li>
               <li>
-                <a href="#">Cough-Assist</a>
+                <a href="./cough-assist.html">Cough-Assist</a>
               </li>
               <li>
-                <a href="#">Veterinary Ventilator</a>
+                <a href="./veterinary-ventilator.html">Veterinary Ventilator</a>
               </li>
               <li>
-                <a href="#">Class II ventilator</a>
+                <a href="./class-II-ventilator.html">Class II ventilator</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="https://wa.me/5527999101403" id="btn-contact">Get in touch</a>
+            <a href="https://wa.me/5527999101403" id="btn-contact"
+              >Get in touch</a
+            >
           </li>
         </ul>
       </nav>
@@ -81,7 +83,7 @@
         <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/project_01/img_01.png"
+              src="../src/imgs/project_01/img_01.png"
               alt="Chronic wound care therapy device"
             />
           </div>
@@ -114,7 +116,7 @@
         <div class="project reverse row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/project_02/img_01.png"
+              src="../src/imgs/project_02/img_01.png"
               alt="Mechanical insufflation-exsufflation device"
             />
           </div>
@@ -149,7 +151,7 @@
         <div class="project colored_bg row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/project_03/img_01.png"
+              src="../src/imgs/project_03/img_01.png"
               alt="Veterinary ventilator and anesthesia machine"
             />
           </div>
@@ -179,7 +181,7 @@
         <div class="project reverse row jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/project_04/img_01.jpg"
+              src="../src/imgs/project_04/img_01.jpg"
               alt="Class II mechanical ventilator"
             />
           </div>
@@ -218,7 +220,7 @@
         <div class="project p_vertical column jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/others/img_01.jpg"
+              src="../src/imgs/others/img_01.jpg"
               alt="Third-Party Device Certification"
             />
           </div>
@@ -236,7 +238,7 @@
         <div class="project p_vertical column jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/others/img_02.png"
+              src="../src/imgs/others/img_02.png"
               alt="27 DoF IMU data fusion"
             />
           </div>
@@ -254,7 +256,7 @@
         <div class="project p_vertical column jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/others/img_03.png"
+              src="../src/imgs/others/img_03.png"
               alt="Consumer-grade gadgets"
             />
           </div>
@@ -276,7 +278,7 @@
         <div class="project p_vertical column jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/others/img_04.jpg"
+              src="../src/imgs/others/img_04.jpg"
               alt="Distributed Polysomnography System"
             />
           </div>
@@ -297,7 +299,7 @@
         <div class="project p_vertical column jbetween acenter">
           <div class="project_img row jstart astart">
             <img
-              src="./src/imgs/others/img_05.png"
+              src="../src/imgs/others/img_05.png"
               alt="Mobile 3-lead ECG for Apple smartphones"
             />
           </div>
@@ -323,7 +325,7 @@
         </p>
       </section>
     </main>
-    <footer style="margin-top: 0px;" class="column jaround acenter">
+    <footer style="margin-top: 0px" class="column jaround acenter">
       <p>[ ffschneider.consultant@gmail.com] [ +55 27 99910-1403 ]</p>
       <a
         class="social_icon"
@@ -332,6 +334,6 @@
         ><ion-icon name="logo-linkedin"></ion-icon
       ></a>
     </footer>
-    <script src="./src/scripts/carousel.js"></script>
+    <script src="../src/scripts/carousel.js"></script>
   </body>
 </html>
